--- a/Sources/CSS/main.css
+++ b/Sources/CSS/main.css
@@ -309,6 +309,7 @@ footer div p {
     #mainDiv {
         width: 98%;
         padding: 8px;
+        margin-left: -8px;
         margin-top: 80px; /* Sabit başlık için boşluk */
     }
     
